# metabuild

./: INFO.md  LICENSE  README.md
contracts/: .gitignore  ava.config.cjs  package.json
contracts/_wip_near_rs/: package.json
contracts/aurora/: hardhat.config.ts  package.json
contracts/aurora/contracts/: PART.sol
contracts/aurora/scripts/: deploy.ts
contracts/aurora/test/: PART.ts
contracts/factory/: Cargo.toml
contracts/factory/scripts/: remove_account.js
contracts/factory/src/: enumeration.rs  lib.rs
contracts/near/: .gitignore  QUESTIONS.md  ava.config.cjs  package.json
contracts/near/__tests__/: part.ava.js  part_general.ava.js  part_postsale.ava.js  part_presale.ava.js  part_sale.ava.js  utils.js
contracts/near/factory/: Cargo.toml  package.json
contracts/near/neardev/: dev-account  dev-account.env
contracts/near_rs/: .gitignore
contracts/near_rs/part-contract/: build.sh  package.json
contracts/part-factory/: .env.example  package.json
contracts/part-factory/scripts/: build.sh
contracts/part-factory/src/: deploy.rs  enumeration.rs  external.rs  lib.rs  part.rs  storage.rs
contracts/part-token/: .env.example  QUESTIONS.md  package-lock.json  package.json  tsconfig.json
contracts/part-token/__tests__/: part_general.ava.js  part_postsale.ava.js  utils.js  (+1 more)
frontend/: .env.example  .eslintrc.json  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/pages/: _app.tsx  _document.tsx  app.tsx  index.tsx  wallet.tsx
frontend/src/: constants.ts  types.ts
frontend/styles/: globals.css
(+143 files in other folders)
