[package]
authors = ["Tobias Leinss <caruso33@web.de>", "Near Inc <hello@nearprotocol.com>"]
edition = "2018"
name = "part-token-factory"
version = "1.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-contract-standards = "4.0.0"
near-sdk = "4.0.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
debug = false
lto = true
opt-level = "z"
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[workspace]
members = []
